<resources>
    <string name="app_name">unidad5</string>
    <string name="et_password">Password</string>
    <string name="et_email">Email</string>
    <string name="btn_login">Login</string>
    <string name="btn_login2">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mttv_description">Detalle de la pelicula</string>
    <string name="btn_login_txt">Iniciar Sesión</string>
    <string name="btn_sing">Registrarse</string>
    <string name="tv_title_original">Título original</string>
    <string name="tv_sinopsis">Sinopsis</string>
    <string name="btn_favoritos_description">Favoritos</string>
    <string name="buscar_peliculas">Buscar peliculas</string>
    <string name="el_padrino">El padrino</string>
    <string name="tv_title_original_fixed">Título Original</string>
    <string name="tv_vote">Calificación</string>
    <string name="mas_votadas">Mas votadas</string>
    <string name="en_cartelera">En cartelera</string>
    <string name="pr_ximos_estrenos">Próximos estrenos</string>
    <string name="populares">Populares</string>
    <string name="favoritas">Favoritas</string>
    <string name="tv_favoritas">Favoritas</string>
    <string name="no_se_ha_encontrado_ninguna_pelicula_con_ese_nombre">No se ha encontrado ninguna pelicula con ese nombre</string>
    <string name="buscar">Buscar</string>
    <string name="ver_todas">Ver todas</string>
    <string name="lista_vac_a">Lista vacía</string>
    <string name="intro1">Intro1</string>
    <string name="intro2">intro2</string>
    <string name="intro3">intro3</string>
    <string name="navegar_entre_vistas">navegar entre vistas</string>
    <string name="valoraci_n_del_p_blico">Valoración del Público:</string>
    <string name="t_tulo_original">Título Original:</string>
    <string name="t_tulo_de_la_pel_cula">Título de la Película</string>
    <string name="tv_tulo_original">Título Original</string>
    <string name="fecha_de_estreno">Fecha de Estreno:</string>
    <string name="tv_title_pelicula">Título de la Película</string>
    <string name="tv_title_originals">Título Original:</string>
    <string name="tv_original">Título Original</string>
    <string name="tv_valoracion">Valoración del Público:</string>
    <string name="tv_valoracion_publico">8.5/10</string>
    <string name="tv_date">Fecha de Estreno:</string>
    <string name="tv_dates">12 de julio de 2023</string>
    <string name="sinopsis_de_la_pel_cula">Sinopsis de la película...</string>
    <string name="btn_back">Volver al menú principal</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="ingresar_sin_registro">Ingresar sin registro</string>
    <string name="entrar_sin_registro">Entrar sin registro</string>
    <string name="usuario">Usuario</string>
    <string name="correo">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="id_usuario">Id usuario</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>

</resources>