<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_favorites"
        android:title="@string/favoritas"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_populares"
        android:title="@string/populares"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_top_rated"
        android:title="@string/mas_votadas"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_upcomming"
        android:title="@string/pr_ximos_estrenos"
        android:orderInCategory="5"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_now_playing"
        android:title="@string/en_cartelera"
        android:orderInCategory="6"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_all_movies"
        android:title="@string/ver_todas"
        android:orderInCategory="1"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/buscar"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>




</menu>
