<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".view.fragments.ProfileFragment">

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="296dp"
        android:layout_height="41dp"
        android:layout_marginTop="228dp"
        android:layout_marginBottom="70dp"
        android:hint="@string/nombre"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_idUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_profile"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="@drawable/ic_launcher_background"
        android:src="@drawable/ic_launcher_foreground"
        app:contentPadding="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/cardview_shadow_end_color" />

    <TextView
        android:id="@+id/tv_idUser"
        android:layout_width="301dp"
        android:layout_height="41dp"
        android:layout_marginTop="68dp"
        android:hint="@string/id_usuario"
        android:textColor="#FDF1F1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_mail2" />

    <TextView
        android:id="@+id/tv_mail2"
        android:layout_width="301dp"
        android:layout_height="41dp"
        android:layout_marginTop="116dp"
        android:hint="@string/correo"
        android:textColor="#FDF1F1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <Button
        android:id="@+id/btn_delete_account"
        android:layout_width="301dp"
        android:layout_height="56dp"
        android:layout_marginTop="495dp"
        android:layout_marginBottom="32dp"
        android:text="@string/eliminar_cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_profile"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
